<resources>
    <string name="app_name">カメラ屋</string>
    <string name="app_subtitle">Kameraya</string>
    <string name="app_copyright">© 2024 adhibuchori Personal Project</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="first_on_boarding_title">Welcome to Kameraya!</string>
    <string name="second_on_boarding_title">Buy Cameras with Ease</string>
    <string name="third_on_boarding_title">Exclusive Offers and Discounts</string>
    <string name="first_on_boarding_description">Easily find various cameras and accessories at Kameraya.</string>
    <string name="second_on_boarding_description">Enjoy a convenient and secure shopping experience at Kameraya.</string>
    <string name="third_on_boarding_description">Get access to exclusive offers and special discounts only at Kameraya.</string>
    <string name="login">Login</string>
    <string name="login_description">Let’s Capture the World</string>
    <string name="register">Register</string>
    <string name="register_description">Register and Capture</string>
    <string name="input_profile_picture">Input Your Profile Picture</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dialog_select_profile_question">Select profile picture from?</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Galery</string>
    <string name="register_now">Register now</string>
    <string name="login_now">Login now</string>
    <string name="no_account">
        <font>Do not have an account?</font>
        <font><u>%1$s</u></font>
    </string>
    <string name="have_account">
        <font>Already have an account?</font>
        <font><u>%1$s</u></font>
    </string>
    <string name="error_username_required">Please enter username first</string>
    <string name="error_email_required">Please enter email first</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_password_required">Please enter password first</string>
    <string name="error_password_length">Password must be at least 8 characters long</string>
    <string name="dialog_question">Dialog Question?</string>
    <string name="dialog_negative_button">Negative</string>
    <string name="dialog_positive_button">Positive</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_transaction">Transaction</string>
    <string name="navigation_wishlist">Wishlist</string>
    <string name="navigation_profile">Profile</string>
    <string name="search_camera">Search Camera</string>
    <string name="find_perfect_camera">Find your perfect camera!</string>
    <string name="welcome_message">Welcome, %s</string>
    <string name="filter">Filter</string>
    <string name="camera_label">Label</string>
    <string name="data_reached_end">Data has reached the end</string>
    <string name="camera_name">Camera Name</string>
    <string name="camera_price">0</string>
    <string name="camera_store">Camera Store</string>
    <string name="camera_review">%s | Terjual %s</string>
    <string name="chip_rating">Review</string>
    <string name="chip_sale">Sale</string>
    <string name="chip_lowest">Lowest Price</string>
    <string name="chip_highest">Highest Price</string>
    <string name="search_history_placeholder">Search History</string>
    <string name="navigation_notification">Notification</string>
    <string name="notification_info">Notification Info</string>
    <string name="notification_status">Notification Status</string>
    <string name="notification_description">Notification Description</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_successful_description">Payment for your order #%1$s was successful and is being processed.</string>
    <string name="payment_failed_description">Payment status for your order is not available.</string>
    <string name="navigation_cart">Cart</string>
    <string name="btn_checkout">Checkout</string>
    <string name="total_payment">Total Payment</string>
    <string name="total_payment_data">Rp0</string>
    <string name="select_all_product">Select All</string>
    <string name="tv_btn_delete_product">Delete</string>
    <string name="items_selected">%1$d Item selected</string>
    <string name="snackbar_select_item">Please select at least one item to checkout.</string>
    <string name="camera_stock_remaining">Remaining %s</string>
    <string name="camera_stock_available">Available %s</string>
    <string name="camera_count">0</string>
    <string name="logout">Logout</string>
    <string name="email_data">Email Data</string>
    <string name="username_data">Username Data</string>
    <string name="switch_theme_dark">Dark</string>
    <string name="switch_theme_light">Light</string>
    <string name="switch_language_japanese">JP</string>
    <string name="switch_language_english">EN</string>
    <string name="dialog_logout_question">"Are you sure you want to logout?"</string>
    <string name="btn_logout">Sure</string>
    <string name="btn_cancel">Cancel</string>
    <string name="add_to_cart">+ Cart</string>
    <string name="wishlist_quantity">%s Item</string>
    <string name="transaction_date"><b>Transaction Date</b> | %s</string>
    <string name="transaction_status">Status</string>
    <string name="transaction_quantity">%s Item</string>
    <string name="transaction_total_title">Total Payment</string>
    <string name="transaction_total">Rp0</string>
    <string name="btn_transaction_review">Review</string>
    <string name="transaction_completed">Completed</string>
    <string name="transaction_not_completed">Not Completed</string>
    <string name="user_review_data">User Review Data</string>
    <string name="review_navigation">Review Navigation</string>
    <string name="product_detail_navigation">Product Detail</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="btn_add_cart">+ Add Cart</string>
    <string name="btn_remove_cart">Cart</string>
    <string name="camera_sold">0</string>
    <string name="camera_rate_and_review">%s (%s)</string>
    <string name="camera_select_variant">Choose Variant</string>
    <string name="camera_label_variant">Choose Variant</string>
    <string name="camera_description_title">Camera Description</string>
    <string name="camera_description">Camera Description</string>
    <string name="buyer_review_title">Buyer Review</string>
    <string name="camera_rate">0</string>
    <string name="camera_rate_max">/5.0</string>
    <string name="camera_rate_and_review_detail">%s rating • %s review</string>
    <string name="satisfied_buyers">%s%% buyers are satisfied</string>
    <string name="see_all">See All</string>
    <string name="share_product_text">Check out this product: %1$s</string>
    <string name="share_product_chooser_title">Share product via</string>
    <string name="wishlist_added">Added to Wishlist</string>
    <string name="wishlist_removed">Removed from Wishlist</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="snackbar_product_id_missing">Product ID is missing</string>
    <string name="checkout_navigation">Checkout</string>
    <string name="btn_buy">Buy</string>
    <string name="item_purchased_title">%d Item Type Purchased</string>
    <string name="payment_method_title">Payment Method</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="checkout_item_quantity">%s Item</string>
    <string name="unavailable">Unavailable</string>
    <string name="snackbar_choose_payment_method">Please choose a payment method first.</string>
    <string name="virtual_account_title">Virtual Account</string>
    <string name="bank_transfer_title">Bank Transfer</string>
    <string name="instant_payment_title">Instant Payment</string>
    <string name="payment_status_navigation">Payment Status</string>
    <string name="payment_info">Payment Successful</string>
    <string name="payment_rate_title">Transaction Rate</string>
    <string name="payment_review">Transaction Review</string>
    <string name="payment_review_data">Transaction Review Data</string>
    <string name="payment_review_hint">Review Your Transaction</string>
    <string name="payment_detail_title">Transaction Details</string>
    <string name="payment_id_title">Transaction ID</string>
    <string name="payment_id_data">Transaction ID Data</string>
    <string name="payment_status_title">Transaction Status</string>
    <string name="payment_status_data">Transaction Status Data</string>
    <string name="payment_date_title">Date</string>
    <string name="payment_date_data">Date Data</string>
    <string name="payment_time_title">Time</string>
    <string name="payment_time_data">Time Data</string>
    <string name="payment_method_data">Payment Method Data</string>
    <string name="payment_total_title">Total Payment</string>
    <string name="payment_total_data">Total Payment Data</string>
    <string name="btn_done">Done</string>
    <string name="rating_required">Please provide a rating before proceeding.</string>
    <string name="review_required">Please provide a review before proceeding.</string>
    <string name="payment_unavailable">Unavailable</string>
    <string name="empty_state_title">Oops, Nothing Here!</string>
    <string name="empty_state_description">Looks like you’ve reached an empty space. Let’s fill it up!</string>
    <string name="error_state_title">Uh-oh, Something Went Wrong!</string>
    <string name="error_state_description">Don’t worry, we’re on it. Try again in a bit!</string>
    <string name="network_error_state_title">Oops, No Internet!</string>
    <string name="network_error_state_description">The internet seems to be napping. Wake it up and try again!</string>
    <string name="http_error_state_title">Yikes, Server is Unhappy!</string>
    <string name="http_error_state_description">Looks like the server is having a bad day. Check back later!</string>
    <string name="not_found_state_title">Camera not Found!</string>
    <string name="not_found_state_description">Oops, we can’t find the camera. It must be playing hide and seek!</string>
    <string name="iv_splash_page_app_logo_description">Kameraya App Logo</string>
    <string name="iv_slider_on_boarding_description">Image On Boarding</string>
    <string name="iv_login_page_app_logo_description">Kameraya App Logo</string>
    <string name="civ_register_page_add_photo_background_icon_description">Background Icon for Adding a Photo</string>
    <string name="iv_register_page_add_photo_icon_description">Button to Add a Photo</string>
    <string name="iv_register_page_profile_image_placeholder_description">Placeholder for the Profile Image</string>
    <string name="iv_register_page_arrow_back_icon_description">Arrow Back Icon</string>
    <string name="iv_row_camera_store_camera_store_icon_description">Store Icon</string>
    <string name="iv_row_camera_store_camera_review_icon_description">Review Icon</string>
    <string name="iv_home_page_set_layout_view_description">Set Layout View Icon</string>
    <string name="iv_home_page_notification_icon_description">Notification Icon</string>
    <string name="iv_profile_page_rectangle_dash_description">Rectangle Dash Image Border</string>
    <string name="iv_profile_page_profile_picture_description">Placeholder for the Profile Image</string>
    <string name="iv_row_search_search_icon_description">Search Icon</string>
    <string name="iv_row_search_arrow_next_icon_description">Arrow Next Icon</string>
    <string name="iv_item_dialog_box_image_description">Dialog Box Vector Placeholder</string>
    <string name="iv_item_dialog_close_icon_description">Close Icon</string>
</resources>