<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_splash_page_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_splash_page_app_logo_description"
            android:src="@drawable/iv_app_logo_kameraya"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_splash_page_app_name"
            style="@style/KamerayaTextViewStyle.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plus_jakarta_sans_extra_bold"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/color_primary"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_splash_page_app_tagline"
            style="@style/KamerayaTextViewStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_subtitle"
            android:textColor="@color/neutral_30" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_splash_page_copyright"
        style="@style/KamerayaTextViewStyle.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_copyright"
        android:textColor="@color/neutral_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>